Centered logo to avoid clickable whitespace

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -38,16 +38,24 @@
   }
 
   // Logo
-  a {
+  .logo-container {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
 
     height: 100%;
 
-    img {
+    a {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
       height: 100%;
+
+      img {
+        height: 100%;
+      }
     }
   }
 
